# GhostWorld

./: .gitignore  ARCHITECTURE.txt  HANDOFF.md  README.md  SPEC.md  editor.pyw  headless_agent.py  launcher.pyw  pyclean  pyproject.toml  runner.pyw
editor/: __init__.py  canvas.py  helpers.py  map_list.py  model.py  palette.py  presets.py  props.py  templates.py  window.py
examples/: 0707.json  _test_A.json  _test_B.json  _test_portal_A.json  _test_portal_B.json  demo_metaverse.json  untitled.json
ghostengine/: __init__.py  _default_map.py  _default_map2.py  animation.py  controller.py  defaults.py  entity.py  frame.py  mapfile.py  minimap.py  renderer.py  runner.pyw  texture.py
metaverse/: __init__.py  _shared.py  _update_check.py  launch.py  local_agent.py  local_client.py  server.py  snapshot.py  world.py
metaverse/tools/: listen.py  look.py
tests/: test_animation.py  test_controller.py  test_e2e.py  test_editor_validation.py  test_entity.py  test_item_isolation.py  test_mapfile.py  test_portal_pairing.py  test_portal_pairing_e2e.py  test_props_panel.py  test_qtbot_diag.py  test_renderer.py  test_server.py  test_teleport_e2e.py  test_window_detect.py  test_window_detect2.py  test_world.py
tests/scratch/: test_ctrlr.py  test_delete.py  test_delete2.py  test_delete3.py  test_diag.py  test_entity.py  test_full.py  test_key.py  test_render_2.py  test_roundtrip.py  test_run_button.py  test_select.py  test_select2.py  test_wall.py
