[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostworld"
version = "0.1.0"
description = "GhostWorld — raycasting 3D engine + metaverse + map editor + AI Agent"
dependencies = [
    "pygame>=2.0",
    "numpy>=1.20",
]

[tool.setuptools.packages.find]
include = ["ghostengine*", "editor*", "metaverse*"]

[project.optional-dependencies]
editor = ["PySide6>=6.5"]
full = ["PySide6>=6.5", "Pillow"]
dev = ["pytest", "mypy"]
