[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostworld"
version = "0.2.10"
description = "GhostWorld — raycasting 3D engine + metaverse + map editor + AI Agent"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.0",
    "numpy>=1.20,<2.5",
]

[project.optional-dependencies]
editor = ["PySide6>=6.5"]
full = ["PySide6>=6.5", "Pillow"]
dev = ["pytest", "mypy"]

[tool.setuptools.packages.find]
include = ["ghostengine*", "editor*", "metaverse*"]

[project.scripts]
ghostworld = "metaverse.launch:main"
ghostworld-editor = "editor:main"
